--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!-- Test workflow GitHub → Netlify 3 nov 2025 -->
+  <!-- WORKFLOW FONCTIONNE ! 3 nov 2025 -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
