--- a/index.html
+++ b/index.html
@@ -1532,5 +1532,12 @@
     <!-- Script modales découvrir -->
     <script src="js/gallery-config.js"></script>
     <script src="js/content-discovery-modals.js"></script>
+    
+    <!-- Console de debug mobile ERUDA (provisoire) -->
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>
+      eruda.init();
+      console.log('🔧 Eruda console activée - Debug Android');
+    </script>
 </body>
 </html>
