--- a/index.html
+++ b/index.html
@@ -1523,14 +1523,14 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/modals.js"></script>
-    <script src="js/animations.js"></script>
+    <script src="js/main.js?v=20251103a"></script>
+    <script src="js/cart.js?v=20251103a"></script>
+    <script src="js/modals.js?v=20251103a"></script>
+    <script src="js/animations.js?v=20251103a"></script>
     <!-- Redéploiement pour activer STRIPE_SECRET_KEY - 30 oct 2025 -->
     
     <!-- Script modales découvrir -->
-    <script src="js/gallery-config.js"></script>
-    <script src="js/content-discovery-modals.js"></script>
+    <script src="js/gallery-config.js?v=20251103a"></script>
+    <script src="js/content-discovery-modals.js?v=20251103a"></script>
 </body>
 </html>
