--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                             <p>
                                 Des jeux pour apprendre ensemble, rire ensemble, et retrouver la lumière de la Torah, en famille.
                             </p>
+                            <a href="a-propos.html" class="btn-cta-acte2">
+                                📖 Lire l'histoire complète
+                            </a>
                         </div>
                     </div>
                     
