--- a/index.html
+++ b/index.html
@@ -151,10 +151,15 @@
                             <p>
                                 Des jeux pour apprendre ensemble, rire ensemble, et retrouver la lumière de la Torah, en famille.
                             </p>
-                            <a href="a-propos.html" class="btn-cta-acte2">
-                                📖 Lire l'histoire complète
-                            </a>
                         </div>
+                    </div>
+                    
+                    <!-- Bouton lien vers À propos -->
+                    <div class="cta-below-summary">
+                        <a href="a-propos.html" class="btn-read-more">
+                            <span class="icon">📚</span>
+                            <span class="text">Lire l'histoire complète</span>
+                        </a>
                     </div>
                     
                     <!-- Flèche PRÉCÉDENT (visible uniquement sur mobile) -->
