Ajout des vidéos de révélation et des images poster

--- a/index.html
+++ b/index.html
@@ -264,6 +264,15 @@
         </div>
     </section>
 
+    <!-- SECTION RÉVÉLATION TRILOGIE - Vidéos de révélation -->
+    <section id="revelation-trilogie">
+        <div class="container">
+            <video id="video1" src="videos/reveal-jdc.mp4" poster="images/poster-jdc.jpg" autoplay muted playsinline></video>
+            <video id="video2" src="videos/reveal-moh.mp4" poster="images/poster-moh.jpg" muted playsinline></video>
+            <video id="video3" src="videos/reveal-poz.mp4" poster="images/poster-poz.jpg" muted playsinline></video>
+        </div>
+    </section>
+
     <!-- HERO BIS - Jérusalem du Ciel -->
     <section id="hero-bis-jdc" class="hero-bis jdc-hero">
         <div class="hero-bis-background">
