--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- NOUVEAU WORKFLOW PARFAIT ! 3 nov 2025! -->
+<!-- NOUVEAU WORKFLOW PARFAIT ! 3 nov 2025!fincommit -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
