--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <!-- Wrapper pour les 3 boîtes vidéo -->
             <div class="revelation-boxes-wrapper">
                 <div class="revelation-video-wrapper">
-                    <video id="video1" src="videos/reveal-jdc.mp4" poster="images/poster-jdc.jpg" autoplay muted playsinline data-game="jdc"></video>
+                    <video id="video1" src="videos/reveal-jdc.mp4" autoplay muted playsinline preload="auto" data-game="jdc"></video>
                     <button class="revelation-replay-btn replay-btn-jdc" data-video="video1" data-text="text1" aria-label="Rejouer">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"/>
@@ -242,7 +242,7 @@
                     <div class="revelation-text game-label game-label-jdc" id="text1">L'HISTOIRE</div>
                 </div>
                 <div class="revelation-video-wrapper">
-                    <video id="video2" src="videos/reveal-moh.mp4" poster="images/poster-moh.jpg" muted playsinline data-game="moh"></video>
+                    <video id="video2" src="videos/reveal-moh.mp4" muted playsinline preload="auto" data-game="moh"></video>
                     <button class="revelation-replay-btn replay-btn-moh" data-video="video2" data-text="text2" aria-label="Rejouer">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"/>
@@ -254,7 +254,7 @@
                     <div class="revelation-text game-label game-label-moh" id="text2">LA LOI</div>
                 </div>
                 <div class="revelation-video-wrapper">
-                    <video id="video3" src="videos/reveal-poz.mp4" poster="images/poster-poz.jpg" muted playsinline data-game="poz"></video>
+                    <video id="video3" src="videos/reveal-poz.mp4" muted playsinline preload="auto" data-game="poz"></video>
                     <button class="revelation-replay-btn replay-btn-poz" data-video="video3" data-text="text3" aria-label="Rejouer">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"/>
