--- a/a-propos.html
+++ b/a-propos.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À Propos - Ora Shel Torah | Mon Parcours</title>
     <meta name="description" content="De l'éloignement à la lumière : découvrez l'histoire de Michael Lumbroso et la naissance d'Ora Shel Torah.">
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://orasheltorah.fr/a-propos.html">
+    
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
