--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,9 @@
   <title>FAQ - Ora Shel Torah | Questions Fréquentes</title>
   <meta name="description" content="Trouvez les réponses à vos questions sur les jeux Ora Shel Torah : Jérusalem du Ciel, Minhag ou Halakha, Poztamitsvah.">
   
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://orasheltorah.fr/faq.html">
+  
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/logo/favicon.png">
   
