--- a/legal/mentions-legales.html
+++ b/legal/mentions-legales.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentions légales - Ora Shel Torah</title>
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://orasheltorah.fr/legal/mentions-legales.html">
+    
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/responsive.css">
 </head>
