--- a/success.html
+++ b/success.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Commande confirmée - Ora Shel Torah</title>
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://orasheltorah.fr/success.html">
+    
     <link rel="icon" type="image/png" href="images/logo/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
