--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ora Shel Torah - Jeux éducatifs juifs | De génération en génération</title>
     <meta name="description" content="Découvrez les jeux éducatifs Ora Shel Torah : Jérusalem du Ciel, Minhag ou Halakha, Poztamitsvah. Transmettez la sagesse juive en famille avec plaisir.">
-    
+    <meta name="google-site-verification" content="IBzdz8Su935Z6s_fI-JxuqDtIeRXjZQRDtUREqYiLr4" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://orasheltorah.fr/">
     
