--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       },
       "contactPoint": {
         "@type": "ContactPoint",
+        "contactType": "Service Client",
         "email": "contact@orasheltorah.com",
-        "telephone": "+33618061000",
-        "contactType": "customer service"
+        "telephone": "+33618061000"
       },
       "sameAs": [
         "https://instagram.com/orasheltorah",
@@ -65,15 +65,19 @@
           "@type": "Product",
           "position": 1,
           "name": "Jérusalem du Ciel",
-          "description": "Jeu éducatif familial pour découvrir 3000 ans d'histoire juive",
-          "image": "https://orasheltorah.fr/images/produits/jdc_box_3d.png",
+          "description": "Jeu éducatif familial pour découvrir 3000 ans d'histoire juive à travers 850 cartes et 6 périodes historiques",
+          "image": "https://orasheltorah.fr/images/produits/jdc-box-3d.jpg",
+          "brand": {
+            "@type": "Brand",
+            "name": "Ora Shel Torah"
+          },
           "offers": {
             "@type": "Offer",
             "price": "39.90",
             "priceCurrency": "EUR",
-            "availability": "https://schema.org/PreOrder"
+            "availability": "https://schema.org/PreOrder",
+            "url": "https://orasheltorah.fr/#hero-bis-jdc"
           },
-          "url": "https://orasheltorah.fr/jeux/jerusalem-du-ciel",
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "4.8",
@@ -84,29 +88,37 @@
           "@type": "Product",
           "position": 2,
           "name": "Minhag ou Halakha",
-          "description": "Jeu de débat pour distinguer lois et coutumes juives",
+          "description": "Jeu de débat et réflexion pour distinguer les lois juives des coutumes, avec 330 cartes sourcées",
           "image": "https://orasheltorah.fr/images/produits/moh_box_3d.png",
+          "brand": {
+            "@type": "Brand",
+            "name": "Ora Shel Torah"
+          },
           "offers": {
             "@type": "Offer",
             "price": "19.90",
             "priceCurrency": "EUR",
-            "availability": "https://schema.org/PreOrder"
-          },
-          "url": "https://orasheltorah.fr/jeux/minhag-ou-halakha"
+            "availability": "https://schema.org/PreOrder",
+            "url": "https://orasheltorah.fr/#hero-bis-moh"
+          }
         },
         {
           "@type": "Product",
           "position": 3,
           "name": "Poztamitsvah",
-          "description": "Jeu éducatif pour découvrir 185 mitsvot essentielles",
+          "description": "Jeu éducatif pour découvrir 185 mitsvot essentielles à travers 35 situations de vie quotidienne",
           "image": "https://orasheltorah.fr/images/produits/poz_box_3d.png",
+          "brand": {
+            "@type": "Brand",
+            "name": "Ora Shel Torah"
+          },
           "offers": {
             "@type": "Offer",
             "price": "19.90",
             "priceCurrency": "EUR",
-            "availability": "https://schema.org/PreOrder"
-          },
-          "url": "https://orasheltorah.fr/jeux/poztamitsvah"
+            "availability": "https://schema.org/PreOrder",
+            "url": "https://orasheltorah.fr/#hero-bis-poz"
+          }
         }
       ]
     }
