--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
   <title>Démo Interactive - Jérusalem du Ciel | Ora Shel Torah</title>
   
   <meta name="description" content="Découvrez la démo interactive du jeu Jérusalem du Ciel.">
+  <link rel="canonical" href="https://orasheltorah.fr/demo/index.html">
   
   <style>
     * {
