--- a/legal/cgv.html
+++ b/legal/cgv.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conditions générales de vente - Ora Shel Torah</title>
-    
-    <!-- Canonical URL -->
+    <meta name="description" content="Consultez les conditions générales de vente des jeux Ora Shel Torah.">
     <link rel="canonical" href="https://orasheltorah.fr/legal/cgv.html">
     
     <link rel="stylesheet" href="../css/main.css">
