--- a/legal/politique-confidentialite.html
+++ b/legal/politique-confidentialite.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politique de confidentialité - Ora Shel Torah</title>
-    
-    <!-- Canonical URL -->
+    <meta name="description" content="Découvrez notre politique de confidentialité et comment nous protégeons vos données personnelles.">
     <link rel="canonical" href="https://orasheltorah.fr/legal/politique-confidentialite.html">
     
     <link rel="stylesheet" href="../css/main.css">
