--- a/legal/retours-remboursements.html
+++ b/legal/retours-remboursements.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retours et remboursements - Ora Shel Torah</title>
-    
-    <!-- Canonical URL -->
+    <meta name="description" content="Consultez notre politique de retours et remboursements pour les jeux Ora Shel Torah.">
     <link rel="canonical" href="https://orasheltorah.fr/legal/retours-remboursements.html">
     
     <link rel="stylesheet" href="../css/main.css">
