--- a/success.html
+++ b/success.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Commande confirmée - Ora Shel Torah</title>
-    
-    <!-- Canonical URL -->
+    <meta name="description" content="Votre commande a été confirmée avec succès. Merci pour votre achat sur Ora Shel Torah.">
     <link rel="canonical" href="https://orasheltorah.fr/success.html">
     
     <link rel="icon" type="image/png" href="images/logo/favicon.png">
