--- a/a-propos.html
+++ b/a-propos.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container-header">
             <a href="index.html" class="logo">
-                <img src="images/logo/logo_large_gold.png" alt="Ora Shel Torah Logo">
+                <img src="images/logo/logo_large_gold.png" alt="Logo Ora Shel Torah - De génération en génération">
             </a>
             <button class="menu-toggle" aria-label="Menu">
                 <span></span>
