--- a/animations/jdc/plateau-jdc.html
+++ b/animations/jdc/plateau-jdc.html
@@ -345,7 +345,7 @@
   <!-- Plateau -->
   <div class="container">
     <div class="plateau-container">
-      <img src="plateaujdc.png" alt="Plateau Jérusalem du Ciel" class="plateau" id="plateau">
+      <img src="plateaujdc.png" alt="Plateau circulaire interactif du jeu Jérusalem du Ciel avec les 6 périodes historiques" class="plateau" id="plateau">
       <svg class="zones-overlay" viewBox="0 0 600 600">
         <circle class="center-zone period-zone" data-zone="0" cx="300" cy="300" r="90"/>
         <path class="period-zone" data-zone="1" d="M 300,300 L 300,500 A 200,200 0 0,0 473,400 Z"/>
