--- a/faq.html
+++ b/faq.html
@@ -370,7 +370,7 @@
   <header id="main-header">
     <div class="container">
       <a href="/index.html" class="logo">
-        <img src="images/logo/logo_large_gold.png" alt="Ora Shel Torah">
+        <img src="images/logo/logo_large_gold.png" alt="Logo Ora Shel Torah - De génération en génération">
         <span class="tagline">De génération en génération</span>
       </a>
       
