--- a/legal/mentions-legales.html
+++ b/legal/mentions-legales.html
@@ -14,7 +14,7 @@
     <header id="main-header">
         <div class="container">
             <a href="../index.html" class="logo">
-                <img src="../images/logo/logo_large.png" alt="Ora Shel Torah">
+                <img src="../images/logo/logo_large.png" alt="Logo Ora Shel Torah - De génération en génération">
                 <span class="tagline">De génération en génération</span>
             </a>
             <nav class="main-nav">
