--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="container">
             <div class="section-header">
                 <span class="eyebrow">Pourquoi j'ai créé Ora Shel Torah</span>
-                <h2>D'où ça vient ?</h2>
+                <h2>Du retour aux sources à la transmission familiale</h2>
             </div>
             
             <!-- Container avec carrousel mobile -->
@@ -328,7 +328,7 @@
         <div class="container">
             <!-- Titre section tripanel -->
             <div class="tripanel-header">
-                <h2 class="tripanel-title">TROIS CHEMINS VERS LA LUMIÈRE</h2>
+                <h2 class="tripanel-title">Nos trois jeux éducatifs juifs : Histoire, Loi, Mitsvot</h2>
                 <div class="title-separator">
                     <span class="separator-star">✦</span>
                 </div>
@@ -383,7 +383,7 @@
             <img src="images/produits/jdc_hero_bg.png" alt="Plateau circulaire du jeu Jérusalem du Ciel montrant les 6 périodes de l'histoire juive">
         </div>
         <div class="hero-bis-content">
-            <h2>Jérusalem du Ciel</h2>
+            <h2>Jérusalem du Ciel <span class="h2-subtitle">— Jeu d'histoire juive familial</span></h2>
             <p class="hero-bis-subtitle">Un voyage à travers 3000 ans d'histoire juive</p>
             <div class="hero-bis-actions">
                 <button class="btn-modal" data-action="video">
@@ -561,7 +561,7 @@
             <img src="images/produits/moh_hero_bg.png" alt="Cartes du jeu Minhag ou Halakha avec sources rabbiniques et explications halakhiques pour distinguer lois et coutumes">
         </div>
         <div class="hero-bis-content">
-            <h2>Minhag ou Halakha</h2>
+            <h2>Minhag ou Halakha <span class="h2-subtitle">— Distinguer lois et coutumes</span></h2>
             <p class="hero-bis-subtitle">Loi ou coutume ? Découvrez la différence</p>
             <div class="hero-bis-actions">
                 <button class="btn-modal" data-action="video">
@@ -729,7 +729,7 @@
             <img src="images/produits/poz_hero_bg.png" alt="Cartes mitsvot du jeu Poztamitsvah illustrant des commandements de la vie quotidienne juive">
         </div>
         <div class="hero-bis-content">
-            <h2>Poztamitsvah</h2>
+            <h2>Poztamitsvah <span class="h2-subtitle">— Découvrir les mitsvot en famille</span></h2>
             <p class="hero-bis-subtitle">Reconnaissez les mitsvot dans chaque instant de votre vie</p>
             <div class="hero-bis-actions">
                 <button class="btn-modal" data-action="video">
