--- a/a-propos.html
+++ b/a-propos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À Propos - Ora Shel Torah | Mon Parcours</title>
-    <meta name="description" content="De l'éloignement à la lumière : découvrez l'histoire de Michael Lumbroso et la naissance d'Ora Shel Torah.">
+    <meta name="description" content="L'histoire de Michael Lumbroso, fondateur d'Ora Shel Torah. Juif de Kippour jusqu'à 54 ans, le 770 et les Igrot Kodesh ont guidé sa mission de transmettre la Torah par le jeu.">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://orasheltorah.fr/a-propos.html">
