--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ - Ora Shel Torah | Questions Fréquentes</title>
-  <meta name="description" content="Trouvez les réponses à vos questions sur les jeux Ora Shel Torah : Jérusalem du Ciel, Minhag ou Halakha, Poztamitsvah.">
+  <meta name="description" content="FAQ Ora Shel Torah : âge recommandé, compatibilité Shabbat, validation halakhique, préparation bar mitzvah, livraison. Toutes vos questions sur nos jeux éducatifs juifs.">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://orasheltorah.fr/faq.html">
