--- a/legal/mentions-legales.html
+++ b/legal/mentions-legales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentions légales - Ora Shel Torah</title>
-    <meta name="description" content="Consultez les mentions légales du site Ora Shel Torah.">
+    <meta name="description" content="Mentions légales d'Ora Shel Torah : informations sur l'éditeur, hébergement, propriété intellectuelle et conditions d'utilisation du site.">
     <link rel="canonical" href="https://orasheltorah.fr/legal/mentions-legales.html">
     
     <link rel="stylesheet" href="../css/main.css">
