--- a/legal/retours-remboursements.html
+++ b/legal/retours-remboursements.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retours et remboursements - Ora Shel Torah</title>
-    <meta name="description" content="Consultez notre politique de retours et remboursements pour les jeux Ora Shel Torah.">
+    <meta name="description" content="Politique de retours et remboursements Ora Shel Torah : garantie 30 jours, conditions de retour, remboursement intégral, frais de port.">
     <link rel="canonical" href="https://orasheltorah.fr/legal/retours-remboursements.html">
     
     <link rel="stylesheet" href="../css/main.css">
