--- a/legal/cgv.html
+++ b/legal/cgv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conditions générales de vente - Ora Shel Torah</title>
-    <meta name="description" content="Consultez les conditions générales de vente des jeux Ora Shel Torah.">
+    <meta name="description" content="Conditions générales de vente Ora Shel Torah : précommandes, livraison, paiement sécurisé, garantie satisfait ou remboursé 30 jours, retours.">
     <link rel="canonical" href="https://orasheltorah.fr/legal/cgv.html">
     
     <link rel="stylesheet" href="../css/main.css">
