--- a/index.html
+++ b/index.html
@@ -468,8 +468,11 @@
                             
                             <!-- Slide 3 : Vidéo teaser -->
                             <div class="carousel-item" data-slide="2">
-                                <video controls>
+                                <video controls muted playsinline preload="metadata" 
+                                       class="carousel-video" 
+                                       poster="images/produits/jdc_hero_bg.png">
                                     <source src="videos/teaser_jdc.mp4" type="video/mp4">
+                                    Votre navigateur ne supporte pas la lecture vidéo.
                                 </video>
                             </div>
                         </div>
@@ -643,8 +646,11 @@
                                 <img src="images/produits/moh_hero_bg.png" alt="Détail des cartes Minhag ou Halakha avec citations rabbiniques et explications pratiques">
                             </div>
                             <div class="carousel-item" data-slide="3">
-                                <video controls>
+                                <video controls muted playsinline preload="metadata" 
+                                       class="carousel-video" 
+                                       poster="images/produits/moh_hero_bg.png">
                                     <source src="videos/teaser_moh_livre.mp4" type="video/mp4">
+                                    Votre navigateur ne supporte pas la lecture vidéo.
                                 </video>
                             </div>
                         </div>
