probleme teaser jdc
modifications code + reintegration video. apparemment le fichier etait cassé

--- a/index.html
+++ b/index.html
@@ -407,9 +407,11 @@
             <button class="btn-close">×</button>
             <div class="video-container">
                 <h3>Jérusalem du Ciel - Présentation vidéo</h3>
-                <video controls poster="images/produits/jdc_hero_bg.png">
+                <video controls playsinline preload="metadata" 
+                       poster="images/produits/jdc_hero_bg.png"
+                       style="position: relative; z-index: 10;">
                     <source src="videos/teaser_jdc.mp4" type="video/mp4">
-                    Votre navigateur ne supporte pas la vidéo.
+                    Votre navigateur ne supporte pas la lecture vidéo.
                 </video>
             </div>
         </div>
@@ -586,9 +588,11 @@
             <button class="btn-close">×</button>
             <div class="video-container">
                 <h3>Minhag ou Halakha - Présentation vidéo</h3>
-                <video controls poster="images/produits/moh_hero_bg.png">
+                <video controls playsinline preload="metadata" 
+                       poster="images/produits/moh_hero_bg.png"
+                       style="position: relative; z-index: 10;">
                     <source src="videos/teaser_moh_livre.mp4" type="video/mp4">
-                    Votre navigateur ne supporte pas la vidéo.
+                    Votre navigateur ne supporte pas la lecture vidéo.
                 </video>
             </div>
         </div>
