correction demarrage acte 3
evite declenchement des animations trop tot

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <!-- Wrapper pour les 3 boîtes vidéo -->
             <div class="revelation-boxes-wrapper">
                 <div class="revelation-video-wrapper">
-                    <video id="video1" src="videos/reveal-jdc.mp4" autoplay muted playsinline preload="auto" data-game="jdc"></video>
+                    <video id="video1" src="videos/reveal-jdc.mp4" muted playsinline preload="auto" data-game="jdc"></video>
                     <button class="revelation-replay-btn replay-btn-jdc" data-video="video1" data-text="text1" aria-label="Rejouer">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"/>
