--- a/index.html
+++ b/index.html
@@ -212,12 +212,14 @@
                 <!-- SLIDE 1 : Vidéo -->
                 <div class="philosophy-slide video-slide" data-slide="0">
                     <div class="video-philosophy-wrapper">
-                        <video id="video-histoire" 
-                               controls 
-                               preload="metadata"
-                               muted="false">
-                            <source src="videos/philosophie_ora_shel_torah.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="100%" height="400" 
+                        src="https://www.youtube.com/embed/31A1hbLDb4c" 
+                        title="Ma Philosophie - Pourquoi j'ai créé Ora Shel Torah" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        allowfullscreen
+                        style="border-radius: 12px;">
+                        </iframe>
                     </div>
                     
                     <!-- Flèche SUIVANT (visible uniquement sur mobile) -->
