--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                 
                 <!-- SLIDE 1 : Vidéo -->
                 <div class="philosophy-slide video-slide" data-slide="0">
-                    <div class="video-philosophy-wrapper">
-                        <iframe width="100%" height="400" 
-                        src="https://www.youtube.com/embed/31A1hbLDb4c" 
-                        title="Ma Philosophie - Pourquoi j'ai créé Ora Shel Torah" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                        allowfullscreen
-                        style="border-radius: 12px;">
+                    <div class="video-philosophy-wrapper" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.15);">
+                        <iframe 
+                            src="https://www.youtube.com/embed/31A1hbLDb4c" 
+                            title="Ma Philosophie - Pourquoi j'ai créé Ora Shel Torah" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen
+                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
                         </iframe>
                     </div>
                     
