--- a/index.html
+++ b/index.html
@@ -332,11 +332,21 @@
         <div class="container">
             <!-- Titre section tripanel -->
             <div class="tripanel-header">
-                <h2 class="tripanel-title">Nos trois jeux éducatifs juifs : Histoire, Loi, Mitsvot</h2>
+                <p class="tripanel-eyebrow">Notre collection</p>
+                <h2 class="tripanel-title">
+                    <span class="title-intro">Nos trois jeux éducatifs juifs</span>
+                    <span class="title-main">Histoire · Loi · Mitsvot</span>
+                </h2>
                 <div class="title-separator">
-                    <span class="separator-star">✦</span>
+                    <div class="separator-stars">
+                        <span class="star">✦</span>
+                        <span class="star">✦</span>
+                        <span class="star">✦</span>
+                    </div>
                 </div>
-                <p class="tripanel-subtitle">Chaque jeu est une porte. Quelle histoire voulez-vous écrire ?</p>
+                <p class="tripanel-subtitle">
+                    Chaque jeu est une porte. <strong>Quelle histoire voulez-vous écrire ?</strong>
+                </p>
             </div>
             
             <!-- Wrapper pour les 3 cartes révélation -->
