--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,12 @@
                 <!-- Produit 1: Jérusalem du Ciel -->
                 <div class="product-card" data-product-id="jdc">
                     <div class="product-image">
-                        <img src="images/produits/jdc-box-3d.jpg" alt="Boîte du jeu Jérusalem du Ciel - Jeu éducatif familial pour découvrir 3000 ans d'histoire juive">
+                        <picture>
+                            <source media="(max-width: 768px)" srcset="images/produits/jdc-box-mobile.png">
+                            <source media="(min-width: 769px)" srcset="images/produits/jdc-box-3d.jpg">
+                            <img src="images/produits/jdc-box-3d.jpg" 
+                                 alt="Boîte du jeu Jérusalem du Ciel - Jeu éducatif familial pour découvrir 3000 ans d'histoire juive">
+                        </picture>
                         <span class="badge">Best-seller</span>
                     </div>
                     <div class="product-info">
@@ -1140,7 +1145,12 @@
                 <!-- Produit 2: Minhag ou Halakha -->
                 <div class="product-card" data-product-id="moh">
                     <div class="product-image">
-                        <img src="images/produits/moh_box_3d.png" alt="Boîte du jeu Minhag ou Halakha - Jeu de débat pour distinguer lois et coutumes juives">
+                        <picture>
+                            <source media="(max-width: 768px)" srcset="images/produits/moh-box-mobile.png">
+                            <source media="(min-width: 769px)" srcset="images/produits/moh_box_3d.png">
+                            <img src="images/produits/moh_box_3d.png" 
+                                 alt="Boîte du jeu Minhag ou Halakha - Jeu de débat pour distinguer lois et coutumes juives">
+                        </picture>
                     </div>
                     <div class="product-info">
                         <h3>Minhag ou Halakha</h3>
@@ -1167,7 +1177,12 @@
                 <!-- Produit 3: Poztamitsvah -->
                 <div class="product-card" data-product-id="poz">
                     <div class="product-image">
-                        <img src="images/produits/poz_box_3d.png" alt="Boîte du jeu Poztamitsvah - Jeu éducatif pour découvrir 185 mitsvot essentielles">
+                        <picture>
+                            <source media="(max-width: 768px)" srcset="images/produits/poz-box-mobile.png">
+                            <source media="(min-width: 769px)" srcset="images/produits/poz_box_3d.png">
+                            <img src="images/produits/poz_box_3d.png" 
+                                 alt="Boîte du jeu Poztamitsvah - Jeu éducatif pour découvrir 185 mitsvot essentielles">
+                        </picture>
                         <span class="badge">Nouveauté</span>
                     </div>
                     <div class="product-info">
