--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <div class="founder-intro-text">
                                 <h3>Mon parcours</h3>
                                 <p>
-                                    J'ai été un juif de Kippour jusqu'à mes 54 ans. Longtemps attaché aux traditions 
+                                    J'ai été un "juif du Kippour" jusqu'à mes 54 ans. Longtemps attaché aux traditions 
                                     sans en saisir le sens, il m'a fallu un choc de la vie pour retrouver le chemin de D.ieu. 
                                     Peu à peu, la prière, l'étude, puis la techouva — ce retour aux sources — se sont 
                                     imposés comme une évidence.
