acte 4 sur mobile 3
acte 4 carrousel a etablir sur mobile essai 3

--- a/index.html
+++ b/index.html
@@ -370,6 +370,23 @@
                     <div class="revelation-text game-label game-label-poz">LES MITSVOT</div>
                 </a>
             </div>
+
+            <!-- Navigation mobile carrousel -->
+            <div class="revelation-mobile-nav">
+                <button class="revelation-nav-btn" id="revelation-prev" aria-label="Jeu précédent">
+                    ‹
+                </button>
+                <button class="revelation-nav-btn" id="revelation-next" aria-label="Jeu suivant">
+                    ›
+                </button>
+            </div>
+
+            <!-- Indicateurs (points) -->
+            <div class="revelation-mobile-dots">
+                <button class="revelation-dot is-active" data-index="0" aria-label="Aller au premier jeu"></button>
+                <button class="revelation-dot" data-index="1" aria-label="Aller au deuxième jeu"></button>
+                <button class="revelation-dot" data-index="2" aria-label="Aller au troisième jeu"></button>
+            </div>
         </div>
     </section>
 
