--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="philosophy-slide video-slide" data-slide="0">
                     <div class="video-philosophy-wrapper" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.15);">
                         <iframe 
-                            src="https://www.youtube.com/embed/vJNM0fgtEPQ 
+                            src="https://www.youtube.com/embed/vjNM0fgtEPQ 
                             title="Ma Philosophie - Pourquoi j'ai créé Ora Shel Torah" 
                             frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
