--- a/faq.html
+++ b/faq.html
@@ -30,8 +30,8 @@
       --accent-poz: #e85d75;
       --text-dark: #2c3e50;
       --text-light: #ffffff;
-      --bg-light: #faf9f6;
-      --bg-white: #ffffff;
+      --bg-light: #fef5e7;
+      --bg-white: #fef5e7;
       --border: #e0e0e0;
       --success: #2ecc71;
       --shadow: 0 2px 8px rgba(0,0,0,0.1);
@@ -272,7 +272,7 @@
 
     /* === INFO BOX === */
     .info-box {
-      background: linear-gradient(135deg, #fff9e6, #ffffff);
+      background: #fef5e7;
       border-left: 4px solid var(--secondary);
       padding: 20px;
       margin: 20px 0;
@@ -280,7 +280,7 @@
     }
 
     .info-box.important {
-      background: linear-gradient(135deg, #ffebee, #ffffff);
+      background: #fef5e7;
       border-left-color: #e74c3c;
     }
 
