--- a/success.html
+++ b/success.html
@@ -22,14 +22,14 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, #1a2332 0%, #0f1419 100%);
-            color: white;
+            background: #fef5e7;
+            color: #1a2332;
             padding: 2rem;
         }
         
         .success-container {
             max-width: 600px;
-            background: white;
+            background: #fef5e7;
             color: #1a1a1a;
             padding: 3rem;
             border-radius: 16px;
@@ -79,7 +79,7 @@
         }
         
         .info-box {
-            background: #f8f9fa;
+            background: #fef5e7;
             padding: 1.5rem;
             border-radius: 8px;
             margin: 2rem 0;
