--- a/faq.html
+++ b/faq.html
@@ -30,8 +30,8 @@
       --accent-poz: #e85d75;
       --text-dark: #2c3e50;
       --text-light: #ffffff;
-      --bg-light: #fef5e7;
-      --bg-white: #fef5e7;
+      --bg-light: #faf9f6;
+      --bg-white: #ffffff;
       --border: #e0e0e0;
       --success: #2ecc71;
       --shadow: 0 2px 8px rgba(0,0,0,0.1);
@@ -272,7 +272,7 @@
 
     /* === INFO BOX === */
     .info-box {
-      background: #fef5e7;
+      background: #ffffff;
       border-left: 4px solid var(--secondary);
       padding: 20px;
       margin: 20px 0;
@@ -280,7 +280,7 @@
     }
 
     .info-box.important {
-      background: #fef5e7;
+      background: #ffffff;
       border-left-color: #e74c3c;
     }
 
@@ -377,7 +377,7 @@
       <nav class="main-nav">
         <a href="/index.html" class="nav-link">Accueil</a>
         <a href="/faq.html" class="nav-link active">FAQ</a>
-        <button id="btn-preorder" class="btn-preorder">Précommander</button>
+        <a href="/index.html#boutique" id="btn-preorder" class="btn-preorder">Précommander</a>
         <a href="/index.html#panier" class="cart-icon" id="cart-icon">
           🛒 <span class="cart-count">0</span>
         </a>
