--- a/success.html
+++ b/success.html
@@ -22,14 +22,14 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: #fef5e7;
-            color: #1a2332;
+            background: linear-gradient(135deg, #0f1419 0%, #1a2332 100%);
+            color: white;
             padding: 2rem;
         }
         
         .success-container {
             max-width: 600px;
-            background: #fef5e7;
+            background: #ffffff;
             color: #1a1a1a;
             padding: 3rem;
             border-radius: 16px;
@@ -79,7 +79,7 @@
         }
         
         .info-box {
-            background: #fef5e7;
+            background: #ffffff;
             padding: 1.5rem;
             border-radius: 8px;
             margin: 2rem 0;
