--- a/a-propos.html
+++ b/a-propos.html
@@ -29,7 +29,7 @@
                 <a href="index.html#acte-2">Notre Histoire</a>
                 <a href="index.html#hero-bis">Nos Jeux</a>
                 <a href="a-propos.html" class="active">À Propos</a>
-                <a href="#" class="btn-precommander">Précommander</a>
+                <a href="index.html#boutique" class="btn-precommander">Précommander</a>
             </nav>
         </div>
     </header>
