--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@
         </div>
     </header>
 
+    <!-- Menu mobile navigation -->
+    <nav class="mobile-nav" id="mobile-nav">
+        <a href="#acte-2" data-scroll-to="acte-2">Notre histoire</a>
+        <a href="#acte-3" data-scroll-to="acte-3">Philosophie</a>
+        <a href="#acte-4" data-scroll-to="acte-4">Nos jeux</a>
+        <a href="#boutique" data-scroll-to="boutique">Boutique</a>
+        <a href="#contact" data-scroll-to="contact">Contact</a>
+        <a href="#boutique" class="btn-precommander-mobile" data-scroll-to="boutique">Précommander</a>
+    </nav>
+
     <!-- ACTE 1: Hero Slider Moderne (Style Asmodee) -->
     <section id="acte-1" class="hero-slider">
         <!-- Container du slider -->
